# android-application-installer

./: .gitignore  .release-notes.md  CHANGES.md  LICENSE  README.md  index.html  package-lock.json  package.json  updater.json  vite.config.ts
.github/workflows/: build.yml
docs/: agent.md  architecture.md  feature-analysis.md  release-guide.md  updating-docs.md  wireless-adb-guide.md
scripts/: bump-version.mjs  generate-updater-json.mjs  open-bundle.mjs  publish-release.mjs  release.mjs  update-changelog.mjs
scripts/lib/: categorize-commits.mjs
src/: App.css  App.tsx  api.ts  helpers.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  cmd.rs  java.rs  lib.rs  main.rs  package.rs  qr_pairing.rs  tools.rs
src-tauri/src/qr_pairing/: firewall.rs  mdns.rs  mod.rs  protocol.rs  tls.rs
src-tauri/src/tools/: config.rs  download.rs  mod.rs  paths.rs  profiles.rs  recent.rs  status.rs
src/__tests__/: AabSettingsSection.test.tsx  AppHeader.test.tsx  DeviceSection.test.tsx  EasterEggOverlay.test.tsx  FileSection.test.tsx  LogPanel.test.tsx  StatusIndicators.test.tsx  Toast.test.tsx  Toolbar.test.tsx  ToolsSection.test.tsx  autoUpdater.test.ts  helpers.test.ts  setup.ts  types.test.ts  useEasterEgg.test.ts  useKeyboardShortcuts.test.ts  useLayout.test.ts  useWirelessAdb.test.ts
src/components/: AabSettingsSection.tsx  AppHeader.tsx  DeviceSection.tsx  EasterEggOverlay.tsx  ErrorBoundary.tsx  FileSection.tsx  LogPanel.tsx  StatusIndicators.tsx  Toast.tsx  Toolbar.tsx  (+1 more)
(+9 files in other folders)
