[package]
name = "android-application-installer"
version = "1.8.2"
description = "A cross-platform desktop app for installing APK & AAB files onto Android devices"
authors = ["yahushadmonte"]
edition = "2021"
license = "MIT"
repository = "https://github.com/havokentity/android-application-installer"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "android_application_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "fs", "io-util", "process", "time", "macros"] }
futures-util = "0.3"
zip = "2"
axmldecoder = "0.5"
indexmap = "1"
aes-gcm = "0.10"
rand = "0.8"
tauri-plugin-notification = "2.3.3"
notify-rust = "4.11"
